[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Opponent/Opponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/ping_pong_8bit_plop.ogg" type="AudioStream" id=3]
[ext_resource path="res://Ball/Ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://Opponent/Opponent.gd" type="Script" id=5]
[ext_resource path="res://Level/Level.gd" type="Script" id=6]
[ext_resource path="res://Assets/PoetsenOne-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_color = Color( 0.85098, 0.847059, 0.843137, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 7 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 641.347, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 58.0873, 352.194 )

[node name="Level" type="Node"]
script = ExtResource( 6 )

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.129412, 0.14902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpponentScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CounterLabel" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -300.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.952941, 0.313726, 0.160784, 1 )
text = "Counter"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="WallTop" type="StaticBody2D" parent="."]
position = Vector2( 639.459, -12.8259 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallTop"]
position = Vector2( 0, 4.24263 )
shape = SubResource( 2 )

[node name="WallBottom" type="StaticBody2D" parent="."]
position = Vector2( 639.459, 724.756 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBottom"]
position = Vector2( 0, 4.24263 )
shape = SubResource( 2 )

[node name="Left" type="Area2D" parent="."]
position = Vector2( -61.8592, 359.796 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
shape = SubResource( 3 )

[node name="Right" type="Area2D" parent="."]
position = Vector2( 1341.05, 359.796 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
shape = SubResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 17.6522, 368.796 )

[node name="Opponent" parent="." instance=ExtResource( 2 )]
position = Vector2( 1263, 368.796 )
script = ExtResource( 5 )

[node name="Ball" parent="." instance=ExtResource( 4 )]

[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
